# hep-forge

./: .gitignore  .gitlab-ci-child.yml  .gitlab-ci.trigger.yml  .gitlab-ci.yml  .gitlab-matrix.yml  README.md  base.gitlab-ci.yml  generate.py  random_build.sh  repo_name
acct-group/madanalysis/: madanalysis-0.ebuild  metadata.xml
acct-group/madgraph/: madgraph-0.ebuild  metadata.xml
acct-user/madgraph/: madgraph-0.ebuild  metadata.xml
app-portage/pkg-testing-tools/: Manifest  pkg-testing-tools-0.1.0.ebuild
dev-lang/cfortran/: cfortran-20210827.ebuild
dev-python/Unum/: Manifest  Unum-4.2.1.ebuild  metadata.xml
dev-python/algopy/: Manifest  algopy-0.5.7.ebuild  metadata.xml
dev-python/archspec/: .build  Manifest  archspec-0.1.4.ebuild  archspec-0.2.0-r1.ebuild  metadata.xml
dev-python/asciidraw/: Manifest  asciidraw-0.1.2.ebuild  metadata.xml
dev-python/autograd/: Manifest  autograd-1.6.2.ebuild
dev-python/awkward/: .build  Manifest  awkward-2.1.1.ebuild  awkward-2.3.3.ebuild  awkward-2.4.6.ebuild  awkward-2.5.2.ebuild  metadata.xml
dev-python/awkward-cpp/: Manifest  awkward-cpp-22.ebuild  awkward-cpp-24.ebuild  awkward-cpp-28.ebuild  metadata.xml
dev-python/awkward_cpp/: awkward_cpp-12.ebuild
dev-python/boost-histogram/: Manifest  boost-histogram-1.3.0.ebuild  boost-histogram-1.3.2.ebuild  boost-histogram-1.4.0.ebuild  metadata.xml
metadata/: layout.conf  pkg_desc_index  timestamp.chk
profiles/: package.mask  repo_name  use.desc  use.local.desc
sci-physics/resummino/files/: CMakeLists.txt  resummino-3.0.0-looptools.patch
(+1641 files in other folders)
